# ipc_bridge

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  ipc_bridge-config.cmake.in  package.xml
cmake/: FindIPC.cmake  FindMatlab.cmake  IPCBridgeGenerateMessages.cmake
include/ipc_bridge/: ipc_bridge.h  ipc_bridge_matlab.h  mex_interface.h  publisher.h  subscriber.h
matlab/+ipc_bridge/: createPublisher.m  createSubscriber.m  ipc_ros.m  publisher.m  subscriber.m
src/geometry_msgs/mex/: geometry_msgs_Point.cc  geometry_msgs_Point32.cc  geometry_msgs_PointStamped.cc  geometry_msgs_Pose.cc  geometry_msgs_PoseArray.cc  geometry_msgs_PoseStamped.cc  geometry_msgs_PoseWithCovariance.cc  geometry_msgs_PoseWithCovarianceStamped.cc  geometry_msgs_Quaternion.cc  geometry_msgs_Transform.cc  geometry_msgs_TransformStamped.cc  geometry_msgs_Twist.cc  geometry_msgs_TwistStamped.cc  geometry_msgs_TwistWithCovariance.cc  geometry_msgs_Vector3.cc  geometry_msgs_Vector3Stamped.cc  geometry_msgs_Wrench.cc
src/geometry_msgs/ros/: geometry_msgs_PoseArray_publisher.cc  geometry_msgs_PoseArray_subscriber.cc  geometry_msgs_PoseStamped_publisher.cc  geometry_msgs_PoseStamped_subscriber.cc  geometry_msgs_PoseWithCovariance_publisher.cc  geometry_msgs_PoseWithCovariance_subscriber.cc  geometry_msgs_Pose_publisher.cc  geometry_msgs_Pose_subscriber.cc  geometry_msgs_Quaternion_publisher.cc  geometry_msgs_Quaternion_subscriber.cc  geometry_msgs_TwistStamped_publisher.cc  geometry_msgs_TwistStamped_subscriber.cc  geometry_msgs_Twist_publisher.cc  geometry_msgs_Twist_subscriber.cc  geometry_msgs_Vector3Stamped_publisher.cc  geometry_msgs_Vector3Stamped_subscriber.cc  geometry_msgs_Vector3_publisher.cc  geometry_msgs_Vector3_subscriber.cc
src/nav_msgs/mex/: nav_msgs_GridCells.cc  nav_msgs_MapMetaData.cc  nav_msgs_OccupancyGrid.cc  nav_msgs_Odometry.cc  nav_msgs_Path.cc
src/nav_msgs/ros/: nav_msgs_Odometry_publisher.cc  nav_msgs_Odometry_subscriber.cc  (+2 more)
src/rosgraph_msgs/: CMakeLists.txt
(+55 files in other folders)
